[metadata]
name = networking-hyperv
summary = This project tracks the work to integrate the Hyper-V networking with Neutron. This project contains the Hyper-V Neutron Agent Mixin, Security Groups Driver, ML2 Mechanism Driver and the utils modules they use in order to properly bind neutron ports on a Hyper-V host. This project resulted from the neutron core vendor decomposition.
description-file =
    README.rst
license = Apache License, Version 2.0
author = Cloudbase Solutions Srl
author-email = info@cloudbasesolutions.com
home-page = http://www.cloudbase.it/
url = https://github.com/cloudbase/neutron-hyperv-agent
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
keywords = openstack neutron hyper-v networking

[files]
packages =
    hyperv

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = hyperv/locale
domain = networking-hyperv

[update_catalog]
domain = networking-hyperv
output_dir = hyperv/locale
input_file = hyperv/locale/networking-hyperv.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = hyperv/locale/networking-hyperv.pot
