[metadata]
name = networking-hyperv
summary = This project tracks the work to integrate the Hyper-V networking with Neutron. This project contains the Hyper-V Neutron Agent Mixin, Security Groups Driver, ML2 Mechanism Driver and the utils modules they use in order to properly bind neutron ports on a Hyper-V host. This project resulted from the neutron core vendor decomposition.
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://github.com/openstack/networking-hyperv
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

keywords = openstack neutron hyper-v networking

[files]
packages =
    networking_hyperv

[entry_points]
oslo.config.opts =
    networking_hyperv = networking_hyperv.neutron.config:list_opts
console_scripts =
    neutron-hyperv-agent = networking_hyperv.neutron.agent.hyperv_neutron_agent:main
    neutron-hnv-agent = networking_hyperv.neutron.agent.hnv_neutron_agent:main
    neutron-hnv-metadata-proxy = networking_hyperv.neutron.agent.hnv_metadata_agent:main

neutron.qos.agent_drivers =
    hyperv = networking_hyperv.neutron.qos.qos_driver:QosHyperVAgentDriver

neutron.ml2.mechanism_drivers =
    hyperv = networking_hyperv.neutron.ml2.mech_hyperv:HypervMechanismDriver

neutron.agent.firewall_drivers =
    hyperv = networking_hyperv.neutron.security_groups_driver:HyperVSecurityGroupsDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_hyperv/locale
domain = networking-hyperv

[update_catalog]
domain = networking-hyperv
output_dir = networking_hyperv/locale
input_file = networking_hyperv/locale/networking-hyperv.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_hyperv/locale/networking-hyperv.pot
